--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -14,68 +14,145 @@
   <script src="js/daynightoverlay.js" charset="utf-8"></script>
 </head>
 <body>
-
-  <div id="mySidenav" class="sidenav">
-    <div class="headerBox">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="closeNav">&times;</a>
+    <div class="bodyContainer">
+      <div id="mySidenav" class="sidenav">
+        <div class="headerBox">
+          <a href="javascript:void(0)" class="settingBtn" onclick="setting()" id="settingBtn">
+            <img src="image/settings.png" />
+          </a>
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="closeNav">
+            &times;
+          </a>
+        </div>
+        <div id="menuList">
+          <div class="input-wrapper">
+            <input type="text" id="pac-input" placeholder="검색" />
+            <img id="microphone" src="image/microphone.png">
+            <span id="cancelBtn">취소</span>
+          </div>
+          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal" data-direction='bottom'>
+            <div>
+              <span width="10%"><img src="image/home.png" width="4%"/></span>
+              <span width="80%">
+                집
+              </span>
+              <span width="10%">></span>
+            </div>
+          </a>
+          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">직장</a>
+          <a href="#" class="gasMenu" data-toggle="modal" data-target="#gasModal">주유소</a>
+          <a href="#" data-toggle="modal" data-target="#favoritesModal">즐겨찾기</a>
+          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">주행 일정</a>
+          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">최근 간 곳들 나올 부분</a>
+      </div>
     </div>
-    <div id="menuList">
-      <input type="text" id="pac-input" placeholder="검색" />
-      <a href="#" data-toggle="modal" data-target="#myModal">집</a>
-      <a href="#" data-toggle="modal" data-target="#myModal">직장</a>
-      <a href="#" data-toggle="modal" data-target="#favoritesModal">즐겨찾기</a>
-      <a href="#" data-toggle="modal" data-target="#myModal">주행 일정</a>
-      <a href="#" data-toggle="modal" data-target="#myModal">최근 간 곳들 나올 부분</a>
-  </div>
-  </div>
 
-  <div>
-    <div id="map"></div>
-    <div id="bottomBar">
-    <span style="font-size:30px;cursor:pointer;" onclick="openNav()" id="openNav"> <span class="glyphicon glyphicon-search"></span></span>
-  </div>
-
-  <!-- Home and work Modal -->
-  <div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the modal.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <div>
+      <div id="map"></div>
+      <div id="bottomBar">
+        <span style="font-size:30px;cursor:pointer;" onclick="openNav()" id="openNav"> <span class="glyphicon glyphicon-search"></span></span>
+      </div>
+      <div id="bottomDestContainer">
+        <div id="bottomDest">
         </div>
       </div>
-
     </div>
-  </div>
 
-  <!-- Modal -->
-  <div id="favoritesModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+    <!-- Home and work Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
 
-      <!-- Favorites -->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">집 & 직장</h4>
+          </div>
+          <div class="modal-body">
+            <p>Some text in the modal.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
         </div>
-        <div class="modal-body">
-          <p>Favorites</p>
+
+      </div>
+    </div>
+
+    <!-- Favorites Modal -->
+    <div id="favoritesModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Favorites -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Modal Header</h4>
+          </div>
+          <div class="modal-body">
+            <p>Favorites</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+      </div>
+    </div>
+
+    <!-- Gas Modal -->
+    <div id="gasModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Favorites -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">주유소</h4>
+          </div>
+          <div class="modal-body">
+            <div class="col-sm-6" id="gasMap">
+
+            </div>
+            <div class="col-sm-6">
+              dds
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
         </div>
       </div>
-
     </div>
-  </div>
 
+    <!-- Destination window -->
+    <div id="destWindow" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Favorites -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">주유소</h4>
+          </div>
+          <div class="modal-body">
+            <div class="col-sm-6" id="gasMap">
+            </div>
+            <div class="col-sm-6">
+              dds
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="box">
+      <div id="panel">
+      </div>
+    </div>​
+  </div>
 </body>
 </html>
