added right bar

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -58,6 +58,12 @@
       </div>
     </div>
 
+    <div id="rightBar" class="rightBar">
+      <div class="" id="">
+fffd
+      </div>
+    </div>
+
     <!-- Home and work Modal -->
     <div id="myModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
