--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -14,7 +14,7 @@
   <script src="js/daynightoverlay.js" charset="utf-8"></script>
 </head>
 <body>
-    <div class="bodyContainer">
+    <div class="bodyContainer" id="bodyContents">
       <div id="mySidenav" class="sidenav">
         <div class="headerBox">
           <a href="javascript:void(0)" class="settingBtn" onclick="setting()" id="settingBtn">
@@ -48,7 +48,11 @@
     </div>
 
     <div>
-      <div id="map"></div>
+      <div id="map">
+      </div>
+      <div id="backBtnWrapper">
+        <a href="#" id="goToAutocomplete"><img src="image/back.png" id="backBtn" /></a>
+      </div>
       <div id="bottomBar">
         <span style="font-size:30px;cursor:pointer;" onclick="openNav()" id="openNav"> <span class="glyphicon glyphicon-search"></span></span>
       </div>
@@ -59,8 +63,25 @@
     </div>
 
     <div id="rightBar" class="rightBar">
-      <div class="" id="">
-fffd
+      <div class="col-sm-12 placeDetail" id="">
+        <div class="col-sm-12 favCancel" id="">
+          <div class="col-sm-1 favoriteAdd" id="favoriteAddBtn">
+            <a href="#" class="" data-toggle="modal" data-target="#favoriteAskModal">&#9734;</a>
+          </div>
+          <div class="col-sm-5 favoriteAdd"> 즐겨찾기</div>
+          <div class="col-sm-6 cancelBtnWrapper"><img class="calcelBtn" src="image/cancel.png" /></div>
+        </div>
+        <div class="col-sm-12 placeIconWrapper"><img class="autocompletePlaceIcon" src="image/info.png" /></div>
+        <div class="col-sm-12" id="autocompletePlaceName"></div>
+        <div class="col-sm-12" id="autocompletePlaceCity">서울특별시</div>
+        <div class="col-sm-12" id="autocompletePlaceDistance">0.5킬로미터 떨어져 있음</div>
+        <div class="col-sm-8 center-block autocompletePlaceLine"></div>
+        <div class="col-sm-12 autocompletePlacePhoneNumber" id="">
+          000-000-0000
+        </div>
+        <div class="col-sm-12 afterPhoneNumberLine"></div>
+        <div class="col-sm-4 reserveDepart"><button type="button" class="btn btn-default btn-block">예약</button></div>
+        <div class="col-sm-8 reserveDepart"><button type="button" class="btn btn-info btn-block">출발 </button></div>
       </div>
     </div>
 
@@ -79,6 +100,28 @@ fffd
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Favorite ask Modal -->
+    <div id="favoriteAskModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Favorites -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h3 class="modal-title">즐겨찾기 이름</h4>
+          </div>
+          <div class="modal-body">
+            <div class="col-sm-12"><input type="text" id="favoriteName" /></div>
+          </div>
+          <div class="modal-footer">
+            <div class="col-sm-6"><button type="button" class="btn btn-default btn-block">취소</button></div>
+            <div class="col-sm-6"><button type="button" class="btn btn-info btn-block">완료</button></div>
           </div>
         </div>
 
