--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -66,10 +66,14 @@
       <div class="col-sm-12 placeDetail" id="">
         <div class="col-sm-12 favCancel" id="">
           <div class="col-sm-1 favoriteAdd" id="favoriteAddBtn">
-            <a href="#" class="" data-toggle="modal" data-target="#favoriteAskModal">&#9734;</a>
+            <a href="#" id="OpenFavoriteAskModal" data-toggle="modal" data-target="#favoriteAskModal">&#9734;</a>
           </div>
           <div class="col-sm-5 favoriteAdd"> 즐겨찾기</div>
-          <div class="col-sm-6 cancelBtnWrapper"><img class="calcelBtn" src="image/cancel.png" /></div>
+          <div class="col-sm-6 cancelBtnWrapper">
+            <a href="#" id="closeRightSidebarBtn">
+              <img class="closeRightSidebar" src="image/cancel.png" />
+            </a>
+          </div>
         </div>
         <div class="col-sm-12 placeIconWrapper"><img class="autocompletePlaceIcon" src="image/info.png" /></div>
         <div class="col-sm-12" id="autocompletePlaceName"></div>
@@ -77,7 +81,7 @@
         <div class="col-sm-12" id="autocompletePlaceDistance">0.5킬로미터 떨어져 있음</div>
         <div class="col-sm-8 center-block autocompletePlaceLine"></div>
         <div class="col-sm-12 autocompletePlacePhoneNumber" id="">
-          000-000-0000
+          415-425-7623
         </div>
         <div class="col-sm-12 afterPhoneNumberLine"></div>
         <div class="col-sm-4 reserveDepart"><button type="button" class="btn btn-default btn-block">예약</button></div>
@@ -121,7 +125,7 @@
           </div>
           <div class="modal-footer">
             <div class="col-sm-6"><button type="button" class="btn btn-default btn-block">취소</button></div>
-            <div class="col-sm-6"><button type="button" class="btn btn-info btn-block">완료</button></div>
+            <div class="col-sm-6"><button type="button" class="btn btn-info btn-block" id="favoriteNameComplete" data-dismiss="modal">완료</button></div>
           </div>
         </div>
 
