--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -41,7 +41,7 @@
           </a>
           <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">직장</a>
           <a href="#" class="gasMenu" data-toggle="modal" data-target="#gasModal">주유소</a>
-          <a href="#" data-toggle="modal" data-target="#favoritesModal">즐겨찾기</a>
+          <a href="#" class="openFavoriteList" data-toggle="modal" data-target="#favoritesModal">즐겨찾기</a>
           <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">주행 일정</a>
           <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">최근 간 곳들 나올 부분</a>
       </div>
@@ -140,13 +140,13 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Modal Header</h4>
+            <h4 class="modal-title">즐겨찾기</h4>
           </div>
           <div class="modal-body">
-            <p>Favorites</p>
+            <div id="favoriteListContents"></div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default favoriteListCloseBtn" data-dismiss="modal">Close</button>
           </div>
         </div>
 
