added bottom slider bar again

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -202,8 +202,9 @@
       </div>
     </div>
 
-    <div id="box">
-      <div id="panel">
+    <!-- Navigation header -->
+    <div id="navigationBottomBar">efw
+      <div id="panel" class="navigationBottomBarHeader">bb
       </div>
     </div>​
   </div>
