Corrected directions display

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -30,20 +30,40 @@
             <img id="microphone" src="image/microphone.png">
             <span id="cancelBtn">취소</span>
           </div>
-          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal" data-direction='bottom'>
+          <a href="#" class="menuDefault menuListItem" data-toggle="modal" data-target="#myModal" data-direction='bottom'>
             <div>
-              <span width="10%"><img src="image/home.png" width="4%"/></span>
-              <span width="80%">
+              <span class="col-sm-1"><img src="image/home.png" /></span>
+              <span width="col-sm-10">
                 집
               </span>
               <span width="10%">></span>
             </div>
           </a>
-          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">직장</a>
-          <a href="#" class="gasMenu" data-toggle="modal" data-target="#gasModal">주유소</a>
-          <a href="#" class="openFavoriteList" data-toggle="modal" data-target="#favoritesModal">즐겨찾기</a>
-          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">주행 일정</a>
-          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">최근 간 곳들 나올 부분</a>
+          <a href="#" class="menuDefault menuListItem" data-toggle="modal" data-target="#myModal">
+            <div>
+              <span class="col-sm-1"><img src="image/connections.png" /></span>
+              <span width="col-sm-10">
+                직장
+              </span>
+              <span width="10%">></span>
+            </div>
+          </a>
+          <a href="#" class="gasMenu menuListItem" data-toggle="modal" data-target="#gasModal">
+            <span class="col-sm-1"></span>
+            주유소
+          </a>
+          <a href="#" class="openFavoriteList menuListItem" data-toggle="modal" data-target="#favoritesModal">
+            <span class="col-sm-1"></span>
+            즐겨찾기
+          </a>
+          <a href="#" class="menuDefault menuListItem" data-toggle="modal" data-target="#myModal">
+            <span class="col-sm-1"></span>
+            주행 일정
+          </a>
+          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">
+            <span class="col-sm-1"></span>
+            최근 간 곳들 나올 부분
+          </a>
       </div>
     </div>
 
