added bottom bar icons

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -257,16 +257,19 @@
           </div>
         </div>
         <div class="col-sm-6 navigationBottomBarBodyRight">
-          <div id="addWaypoints">경유지 추가
+          <div id="addWaypoints"><img src="image/add-waypoint.png" /> 경유지 추가
           </div>
           <div class="middleFunctions">
-            <div class="col-sm-4 middleFunctions">
+            <div class="col-sm-4">
+              <div id=""><img src="image/road.png" /></div>
               <div id="showPath">경로</div>
             </div>
             <div class="col-sm-4">
+              <div id=""><img src="image/send.png" /></div>
               <div id="showPath">ETA 전송</div>
             </div>
             <div class="col-sm-4">
+              <div id=""><img src="image/power-button.png" /></div>
               <div id="showPath">종료</div>
             </div>
           </div>
