--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -17,7 +17,7 @@
     <div class="bodyContainer" id="bodyContents">
       <div id="mySidenav" class="sidenav">
         <div class="headerBox">
-          <a href="javascript:void(0)" class="settingBtn" onclick="setting()" id="settingBtn">
+          <a href="javascript:void(0)" class="settingBtn" id="settingBtn" data-toggle="modal" data-target="#settingModal" data-direction='bottom'>
             <img src="image/settings.png" />
           </a>
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="closeNav">
@@ -191,6 +191,28 @@
             </div>
             <div class="col-sm-6">
               dds
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Setting Modal -->
+    <div id="settingModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Favorites -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">설정</h4>
+          </div>
+          <div class="modal-body">
+            <div class="col-sm-6">
+              설정
             </div>
           </div>
           <div class="modal-footer">
