--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -15,6 +15,15 @@
 </head>
 <body>
     <div class="bodyContainer" id="bodyContents">
+      <div id="header">
+        <div class="col-sm-1">
+          <img id="header-back" src="image/left-arrow.png" />
+        </div>
+        <div id="header-title" class="col-sm-10">주유소</div>
+        <div class="col-sm-1">
+          <img id="header-close" src="image/close.png" />
+        </div>
+      </div>
       <div id="mySidenav" class="sidenav">
         <div class="headerBox">
           <a href="javascript:void(0)" class="settingBtn" id="settingBtn" data-toggle="modal" data-target="#settingModal" data-direction='bottom'>
@@ -48,7 +57,7 @@
               <span width="10%">></span>
             </div>
           </a>
-          <a href="#" class="gasMenu menuListItem" data-toggle="modal" data-target="#gasModal">
+          <a href="#" class="gasMenu menuListItem">
             <span class="col-sm-1"></span>
             주유소
           </a>
