fixed resize problem & added gas station info

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBsYVLaGllEz-XZYoF6xv_wqPsrG0k7oFs&libraries=places&signed_in=false"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&client=gme-sphinc&libraries=places&signed_in=false"></script> -->
   <script src="https://www.google.com/jsapi"></script>
   <script src="js/app.js" charset="utf-8"></script>
   <script src="js/daynightoverlay.js" charset="utf-8"></script>
@@ -59,7 +60,7 @@
           </a>
           <a href="#" class="gasMenu menuListItem">
             <span class="col-sm-1"></span>
-            주유소
+            주유소<div id="output"></div>
           </a>
           <a href="#" class="openFavoriteList menuListItem" data-toggle="modal" data-target="#favoritesModal">
             <span class="col-sm-1"></span>
