deleted gas modal

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -60,7 +60,7 @@
           </a>
           <a href="#" class="gasMenu menuListItem">
             <span class="col-sm-1"></span>
-            주유소<div id="output"></div>
+            주유소
           </a>
           <a href="#" class="openFavoriteList menuListItem" data-toggle="modal" data-target="#favoritesModal">
             <span class="col-sm-1"></span>
@@ -182,31 +182,6 @@
           </div>
         </div>
 
-      </div>
-    </div>
-
-    <!-- Gas Modal -->
-    <div id="gasModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-
-        <!-- Favorites -->
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">주유소</h4>
-          </div>
-          <div class="modal-body">
-            <div class="col-sm-6" id="gasMap">
-
-            </div>
-            <div class="col-sm-6">
-              dds
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
-        </div>
       </div>
     </div>
 
