fixed setTimeout bug & working on gas info

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -121,6 +121,11 @@
       </div>
     </div>
 
+    <div id="gasStationInfoBar" class="gasStationInfoBar">
+      <div id="gasInfoPanel">
+      </div>
+    </div>
+
     <!-- Home and work Modal -->
     <div id="myModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
