added gas station icon

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -59,17 +59,17 @@
             </div>
           </a>
           <a href="#" class="gasMenu menuListItem">
-            <span class="col-sm-1"></span>
+            <span class="col-sm-1"><img src="image/gas-station-thumb.png" /></span>
             주유소
           </a>
           <a href="#" class="openFavoriteList menuListItem" data-toggle="modal" data-target="#favoritesModal">
-            <span class="col-sm-1"></span>
+            <span class="col-sm-1"><img src="image/star.png" /></span>
             즐겨찾기
           </a>
-          <a href="#" class="menuDefault menuListItem" data-toggle="modal" data-target="#myModal">
+          <!-- <a href="#" class="menuDefault menuListItem" data-toggle="modal" data-target="#myModal">
             <span class="col-sm-1"></span>
             주행 일정
-          </a>
+          </a> -->
           <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">
             <span class="col-sm-1"></span>
             최근 간 곳들 나올 부분
@@ -109,12 +109,12 @@
         <div class="col-sm-12" id="autocompletePlaceName"></div>
         <div class="col-sm-12" id="autocompletePlaceCity">서울특별시</div>
         <div class="col-sm-12" id="autocompletePlaceDistance">0.5킬로미터 떨어져 있음</div>
-        <div class="col-sm-2"></div>
+        <!-- <div class="col-sm-2"></div>
         <div class="col-sm-8 center-block autocompletePlaceLine"></div>
         <div class="col-sm-2"></div>
         <div class="col-sm-12 autocompletePlacePhoneNumber" id="">
           415-425-7623
-        </div>
+        </div> -->
         <div class="col-sm-12 afterPhoneNumberLine"></div>
         <div class="col-sm-4 reserveDepart"><button type="button" class="btn btn-default btn-block">예약</button></div>
         <div class="col-sm-8 reserveDepart"><button type="button" id="departureBtn" class="btn btn-info btn-block">출발 </button></div>
