--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -40,7 +40,7 @@
             <img id="microphone" src="image/microphone.png">
             <span id="cancelBtn">취소</span>
           </div>
-          <a href="#" class="menuDefault menuListItem" data-toggle="modal" data-target="#myModal" data-direction='bottom'>
+          <a href="#" class="menuDefault menuListItem home-office" data-toggle="modal" data-target="#myModal" data-direction='bottom'>
             <div>
               <span class="col-sm-1"><img src="image/home.png" /></span>
               <span width="col-sm-10">
@@ -49,7 +49,7 @@
               <span width="10%">></span>
             </div>
           </a>
-          <a href="#" class="menuDefault menuListItem" data-toggle="modal" data-target="#myModal">
+          <a href="#" class="menuDefault menuListItem home-office" data-toggle="modal" data-target="#myModal">
             <div>
               <span class="col-sm-1"><img src="image/connections.png" /></span>
               <span width="col-sm-10">
@@ -169,6 +169,28 @@
       </div>
     </div>
 
+    <!-- Favorite ask Modal -->
+    <div id="closeAskModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Favorites -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h3 class="modal-title">나중에 주행하시겠어요?</h4>
+          </div>
+          <div class="modal-body">
+            <div class="col-sm-12">주행 일정을 계획하시고 약속 시간에 맞춰 출발 시간 알림을 받으세요.</div>
+          </div>
+          <div class="modal-footer">
+            <div class="col-sm-6"><button type="button" class="btn btn-default btn-block">아니요, 됐어요</button></div>
+            <div class="col-sm-6"><button type="button" class="btn btn-info btn-block" id="navagationClose" data-dismiss="modal">예</button></div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
     <!-- Favorites Modal -->
     <div id="favoritesModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
@@ -274,15 +296,15 @@
           <div class="middleFunctions">
             <div class="col-sm-4">
               <div id=""><img src="image/road.png" /></div>
-              <div id="showPath">경로</div>
+              <div id="alternativePaths">경로</div>
             </div>
             <div class="col-sm-4">
               <div id=""><img src="image/send.png" /></div>
-              <div id="showPath">ETA 전송</div>
+              <div id="sendEta">ETA 전송</div>
             </div>
             <div class="col-sm-4">
               <div id=""><img src="image/power-button.png" /></div>
-              <div id="showPath">종료</div>
+              <div id="closeNavigation">종료</div>
             </div>
           </div>
           <div class="bottomBottons col-sm-12" id="">
