--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -70,10 +70,10 @@
             <span class="col-sm-1"></span>
             주행 일정
           </a> -->
-          <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">
+          <!-- <a href="#" class="menuDefault" data-toggle="modal" data-target="#myModal">
             <span class="col-sm-1"></span>
             최근 간 곳들 나올 부분
-          </a>
+          </a> -->
       </div>
     </div>
 
@@ -234,30 +234,6 @@
       </div>
     </div>
 
-    <!-- Destination window -->
-    <div id="destWindow" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-
-        <!-- Favorites -->
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">주유소</h4>
-          </div>
-          <div class="modal-body">
-            <div class="col-sm-6" id="gasMap">
-            </div>
-            <div class="col-sm-6">
-              dds
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <!-- Navigation header -->
     <div id="navigationBottomBar">
       <div class="navigationBottomBarTitle">
@@ -302,9 +278,11 @@
               <div id=""><img src="image/send.png" /></div>
               <div id="sendEta">ETA 전송</div>
             </div>
-            <div class="col-sm-4">
-              <div id=""><img src="image/power-button.png" /></div>
-              <div id="closeNavigation">종료</div>
+            <div class="col-sm-4" id="endButton">
+              <a href="#" data-toggle="modal" data-target="#closeAskModal">
+                <div id=""><img src="image/power-button.png" /></div>
+                <div id="closeNavigation">종료</div>
+              </a>
             </div>
           </div>
           <div class="bottomBottons col-sm-12" id="">
