added circle current position icon

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -13,6 +13,7 @@
   <script src="https://www.google.com/jsapi"></script>
   <script src="js/app.js" charset="utf-8"></script>
   <script src="js/daynightoverlay.js" charset="utf-8"></script>
+  <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 </head>
 <body>
     <div class="bodyContainer" id="bodyContents">
