added TTS function

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -241,13 +241,13 @@
         <div class="col-sm-1">
           <span style="font-size:30px;cursor:pointer;" onclick="openNav()" id="openNav"> <span class="glyphicon glyphicon-search"></span></span>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-1">
 
         </div>
-        <div class="col-sm-1 downImage">
+        <div class="col-sm-0 downImage">
           <!-- <img src="image/down.png" /> -->
         </div>
-        <div class="col-sm-1" id="estimatedTime">
+        <div class="col-sm-3" id="estimatedTime">
           <!-- 소요시간 -->
         </div>
         <div class="col-sm-2 showTime">
