modified on close nav function

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -142,7 +142,7 @@
             <p>Some text in the modal.</p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default close-home-work" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default close-home-office" data-dismiss="modal">Close</button>
           </div>
         </div>
 
