--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -118,8 +118,8 @@
           415-425-7623
         </div> -->
         <div class="col-sm-12 afterPhoneNumberLine"></div>
-        <div class="col-sm-4 reserveDepart"><button type="button" class="btn btn-default btn-block">예약</button></div>
-        <div class="col-sm-8 reserveDepart"><button type="button" id="departureBtn" class="btn btn-info btn-block">출발 </button></div>
+        <!-- <div class="col-sm-4 reserveDepart"><button type="button" class="btn btn-default btn-block">예약</button></div> -->
+        <div class="col-sm-12 reserveDepart"><button type="button" id="departureBtn" class="btn btn-info btn-block">출발 </button></div>
       </div>
     </div>
 
@@ -288,8 +288,8 @@
             </div>
           </div>
           <div class="bottomBottons col-sm-12" id="">
-            <div class="col-sm-4"><button type="button" class="btn btn-default btn-block">예약</button></div>
-            <div class="col-sm-8"><button type="button" id="realDeparture" class="btn btn-info btn-block">출발</button></div>
+            <!-- <div class="col-sm-4"><button type="button" class="btn btn-default btn-block">예약</button></div> -->
+            <div class="col-sm-12"><button type="button" id="realDeparture" class="btn btn-info btn-block">출발</button></div>
           </div>
         </div>
       </div>
