--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -109,8 +109,8 @@
         </div>
         <div class="col-sm-12 placeIconWrapper"><img class="autocompletePlaceIcon" src="image/info.png" /></div>
         <div class="col-sm-12" id="autocompletePlaceName"></div>
-        <div class="col-sm-12" id="autocompletePlaceCity">서울특별시</div>
-        <div class="col-sm-12" id="autocompletePlaceDistance">0.5킬로미터 떨어져 있음</div>
+        <div class="col-sm-12" id="autocompletePlaceCity"></div>
+        <div class="col-sm-12" id="autocompletePlaceDistance"></div>
         <!-- <div class="col-sm-2"></div>
         <div class="col-sm-8 center-block autocompletePlaceLine"></div>
         <div class="col-sm-2"></div>
@@ -254,10 +254,10 @@
         <div class="col-sm-2 showTime">
           <!-- 목적지 도착 시간 -->
         </div>
-        <div class="col-sm-2" id="estimatedDistance">
+        <div class="col-sm-3" id="estimatedDistance">
           <!-- 거리 -->
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2">
 
         </div>
       </div>
