--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -265,7 +265,7 @@
         <div class="col-sm-6 destinationInfo">
           <div id="destinationName">
           </div>
-          <div id="destinationRoutes">
+          <div id="destinationPanorama">
           </div>
         </div>
         <div class="col-sm-6 navigationBottomBarBodyRight">
