--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -236,6 +236,14 @@
       </div>
     </div>
 
+    <!-- Show wait image -->
+    <div id="WaitDialog" class="hidden" style="text-align: center">
+      <img src="images/voice-listen.gif" />
+      <div style="margin-top: 10px; color: white">
+          <b>Please wait</b>
+      </div>
+    </div>
+
     <!-- Navigation header -->
     <div id="navigationBottomBar">
       <div class="navigationBottomBarTitle">
