added dynamic estimation according to waypoints

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -163,7 +163,7 @@
             <div class="col-sm-12"><input type="text" id="favoriteName" /></div>
           </div>
           <div class="modal-footer">
-            <div class="col-sm-6"><button type="button" class="btn btn-default btn-block">취소</button></div>
+            <div class="col-sm-6"><button type="button" class="btn btn-default btn-block" data-dismiss="modal">취소</button></div>
             <div class="col-sm-6"><button type="button" class="btn btn-info btn-block" id="favoriteNameComplete" data-dismiss="modal">완료</button></div>
           </div>
         </div>
