added library to rotate marker according to angle

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -12,6 +12,7 @@
   <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&client=gme-sphinc&libraries=places&signed_in=false"></script> -->
   <script src="https://www.google.com/jsapi"></script>
   <script src="js/app.js" charset="utf-8"></script>
+  <script src="js/epolys.js" charset="utf-8"></script>
   <script src="js/voiceRecognition.js" charset="utf-8"></script>
   <script src="js/daynightoverlay.js" charset="utf-8"></script>
   <!-- <script src="http://code.responsivevoice.org/responsivevoice.js"></script> -->
