added avoid highways and tolls

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -231,7 +231,7 @@
             <div class="modal-content-container">
               <div class="col-sm-12 option-modal-contents">
                 <div class="col-sm-10">
-                  맵 스타일 적용
+                  Waze 스타일 지도
                 </div>
                 <div class="col-sm-2">
                   <input type="checkbox" id="isStyledMap" name="my-checkbox" checked>
@@ -242,7 +242,7 @@
                   교통량 레이어 적용
                 </div>
                 <div class="col-sm-2">
-                  <input type="checkbox" id="isTrafficLayerOn" name="my-checkbox" checked>
+                  <input type="checkbox" id="isTrafficLayerOnOption" name="my-checkbox">
                 </div>
               </div>
               <div class="col-sm-12 option-modal-contents">
@@ -250,7 +250,7 @@
                   고속도로 제외
                 </div>
                 <div class="col-sm-2">
-                  <input type="checkbox" id="avoidHighways" name="my-checkbox" checked>
+                  <input type="checkbox" id="avoidHighways" name="my-checkbox">
                 </div>
               </div>
               <div class="col-sm-12 option-modal-contents">
@@ -258,12 +258,13 @@
                   톨게이트 제외
                 </div>
                 <div class="col-sm-2">
-                  <input type="checkbox" id="avoidTolls" name="my-checkbox" checked>
+                  <input type="checkbox" id="avoidTolls" name="my-checkbox">
                 </div>
               </div>
+              <!-- 길안내 자막 언어. 스피치 언어 설정, 배경맵 설정(hybrid/roadmap) -->
             </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default optionCloseBtn" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
