added voices list parsing

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -261,6 +261,14 @@
                   <input type="checkbox" id="avoidTolls" name="my-checkbox">
                 </div>
               </div>
+              <!-- <div class="col-sm-12 option-modal-contents form-group">
+                <div class="col-sm-6">
+                  음성 언어
+                </div>
+                <div class="col-sm-12">
+                  <select name="voice" id="voice" class="form-control"></select>
+                </div>
+              </div> -->
               <!-- 길안내 자막 언어. 스피치 언어 설정, 배경맵 설정(hybrid/roadmap) -->
             </div>
           <div class="modal-footer">
