added send ETA mailto event

--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -321,8 +321,10 @@
               <div id="alternativePaths">경로</div>
             </div>
             <div class="col-sm-4">
-              <div id=""><img src="image/send.png" /></div>
-              <div id="sendEta">ETA 전송</div>
+              <a href="#" id="sendETA">
+                <div id=""><img src="image/send.png" /></div>
+                <div id="sendEta">ETA 전송</div>
+              </a>
             </div>
             <div class="col-sm-4" id="endButton">
               <a href="#" data-toggle="modal" data-target="#closeAskModal">
