--- a/google_maps_new/index.html
+++ b/google_maps_new/index.html
@@ -15,7 +15,7 @@
   <script src="js/app.js" charset="utf-8"></script>
   <script src="js/epolys.js" charset="utf-8"></script>
   <script src="js/voiceRecognition.js" charset="utf-8"></script>
-  <script src="js/daynightoverlay.js" charset="utf-8"></script>
+  <!-- <script src="js/daynightoverlay.js" charset="utf-8"></script> -->
 </head>
 <body>
     <div class="bodyContainer" id="bodyContents">
